# paperfig

./: LICENSE  README.md  pyproject.toml
examples/: example_2dmap.py  example_linlin.py  example_quiver3d.py
paperfig/: __init__.py  figure.py  options.py  panel_1d.py  panel_2d.py  panel_3d.py  utils.py  vectorfield_panel.py
