[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfig"
version = "0.0.1"
description = "Python figure plot package"
authors = [
    { name = "Michael P. Adams" }
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "pillow",
    "pyvista"
]
